Stop menu from being full-width on mobile

--- a/src/less/_objects.sidebar.less
+++ b/src/less/_objects.sidebar.less
@@ -72,14 +72,16 @@
   }
 
   .sidebar__content {
-    width: 100%;
     display: none;
+    width: auto;
   }
 
   .sidebar__content--open-nav {
     display: block;
-    margin: 0;
+    margin-left: auto;
+    margin-right: 0.5em;
     padding: 2em;
+    padding-left: 3em;
     padding-bottom: 3em;
   }
 
